Added Milestone 3 and joined the moodpost to user